# LoopWaiter

./: CMakeLists.txt  README.md  library.properties
examples/usage/: usage.ino
src/: CMakeLists.txt  LoopWaiter.h
test/: CMakeLists.txt  main.cpp  tests.cpp
